--- a/iaecal/templates/index.html
+++ b/iaecal/templates/index.html
@@ -9,6 +9,8 @@
 		<link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" media="screen">
 		<script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
 		<script src="{{ url_for('static', filename='bower_components/angular/angular.min.js') }}"></script>
+		<script src="static/bower_components/spin.js/spin.js"></script>
+		<script src="static/bower_components/angular-spinner/angular-spinner.js"></script>
 		<script src="{{ url_for('static', filename='main.js') }}"></script>
 	</head>
 	<body ng-controller="IAECalController">
@@ -35,6 +37,9 @@
 							</button>
 						</p>
 					</form>
+
+					<span us-spinner spinner-key="spinner-form" spinner-theme=""></span>
+
 				</div> <!-- col-md-6 col-md-offset-3 -->
 
 				<div class="col-md-6 col-md-offset-3 panel" ng-show="(showUrl)">
