--- a/iaecal/templates/index.html
+++ b/iaecal/templates/index.html
@@ -9,8 +9,8 @@
 		<link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" media="screen">
 		<script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
 		<script src="{{ url_for('static', filename='bower_components/angular/angular.min.js') }}"></script>
-		<script src="static/bower_components/spin.js/spin.js"></script>
-		<script src="static/bower_components/angular-spinner/angular-spinner.js"></script>
+		<script src="{{ url_for('static', filename='bower_components/spin.js/spin.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='bower_components/angular-spinner/angular-spinner.min.js') }}"></script>
 		<script src="{{ url_for('static', filename='main.js') }}"></script>
 	</head>
 	<body ng-controller="IAECalController">
