--- a/iaecal/templates/index.html
+++ b/iaecal/templates/index.html
@@ -6,12 +6,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="csrf-token" content="{{ csrf_token() }}">
 		<link href="{{ url_for('static', filename='bower_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
-		<link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" media="screen">
+
+		{% assets filters='yui_css', output='css/main.min.css', 'css/main.css' %}
+		<link href="{{ ASSET_URL }}" rel="stylesheet" media="screen">
+		{% endassets %}
+
 		<script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
 		<script src="{{ url_for('static', filename='bower_components/angular/angular.min.js') }}"></script>
 		<script src="{{ url_for('static', filename='bower_components/spin.js/spin.min.js') }}"></script>
 		<script src="{{ url_for('static', filename='bower_components/angular-spinner/angular-spinner.min.js') }}"></script>
-		<script src="{{ url_for('static', filename='main.js') }}"></script>
+
+		{% assets filters='jsmin', output='js/main.min.js', 'js/main.js' %}
+		<script src="{{ ASSET_URL }}"></script>
+		{% endassets %}
 	</head>
 	<body ng-controller="IAECalController">
 		<div class="container">
