--- a/iaecal/templates/index.html
+++ b/iaecal/templates/index.html
@@ -51,8 +51,8 @@
 					<p class="help-block text-center">
 						{{ _("Copy past this link in Google Calender to synchronise your events:") }}
 					</p>
-					<a class="cal-url" href="{{ '{{ serverData.url }}' }}">
-						{{ '{{ serverData.url }}' }}
+					<a class="cal-url" href="{a serverData.url a}">
+						{a serverData.url a}
 					</a>
 				</div> <!-- col-md-6 col-md-offset-3 -->
 			</div> <!-- row -->
