non_field_errors FTW

--- a/iaecal/templates/_form_helpers.html
+++ b/iaecal/templates/_form_helpers.html
@@ -4,8 +4,8 @@
 	<div class="form-group" ng-class="{'has-error': form.{{ field.name }}.$invalid}">
 		{{ field(class_="form-control", ng_model=field.name, placeholder=field.label.text)|safe }}
 
-		<ul ng-show="(form.{{ field.name }}.$dirty && form.{{ field.name }}.$invalid) || form.{{ field.name }}.$pristine">
-			<li ng-show="form.{{ field.name }}.$error.server">
+		<ul ng-show="form.{{ field.name }}.$invalid">
+			<li>
 				<span class="help-block">{a errors.{{ field.name }} a}</span>
 			</li>
 		</ul>
