Fix missing options (webassets) in babel.cfg

--- a/iaecal/templates/index.html
+++ b/iaecal/templates/index.html
@@ -40,7 +40,7 @@
 						</p>
 						<p class="text-center">
 							<button class="btn btn-success btn-lg btn-url" type="submit" ng-class="{'disabled': showUrl }">
-								{{ _("Obtenir l'url") }}
+								{{ _("Get the url") }}
 							</button>
 						</p>
 					</form>
