--- a/iaecal/templates/_form_helpers.html
+++ b/iaecal/templates/_form_helpers.html
@@ -1,12 +1,14 @@
 {# _form_helpers.html #}
 
 {% macro render_field(field) %}
-	<div class="form-group" ng-class="{'has-error': form.{{ field.name }}.$invalid}">
+	<div class="form-group" ng-class="{'has-error': hasError('{{ field.name }}')}">
 		{{ field(class_="form-control", ng_model=field.name, placeholder=field.label.text)|safe }}
 
-		<ul ng-show="form.{{ field.name }}.$invalid">
+		<ul ng-show="hasError('{{ field.name }}')">
 			<li>
-				<span class="help-block">{a errors.{{ field.name }} a}</span>
+				<span class="help-block">
+					{a errors.{{ field.name }} a}
+				</span>
 			</li>
 		</ul>
 	</div>
