--- a/iaecal/templates/index.html
+++ b/iaecal/templates/index.html
@@ -31,7 +31,7 @@
 						{{ render_field(form.username) }}
 						{{ render_field(form.password) }}
 
-						<div class="form-group" name="non_field_errors" ng-model="non_field_errors" ng-show="form.non_field_errors.$error.server" ng-class="{'has-error': form.non_field_errors.$invalid}">
+						<div class="form-group" name="non_field_errors" ng-model="non_field_errors" ng-show="hasError('non_field_errors')" ng-class="{'has-error': hasError('non_field_errors')}">
 							<span class="help-block text-center">{a errors.non_field_errors a}</span>
 						</div>
 
